lwcrecipies-master/force-app/main/default/objects/Stripe_Config__mdt/fields/Create_Charge__c.field-meta.xml
<CustomField>
    <fullName>Create_Charge__c</fullName>
    <defaultValue>&quot;https://api.stripe.com/v1/charges&quot;</defaultValue>
    <label>Create Charge</label>
    <type>Url</type>
</CustomField>