lwcrecipies-master/force-app/main/default/objects/Stripe_Config__mdt/fields/Create_Customer__c.field-meta.xml
<CustomField>
    <fullName>Create_Customer__c</fullName>
    <defaultValue>&quot;https://api.stripe.com/v1/customers&quot;</defaultValue>
    <label>Create Customer</label>
    <type>Url</type>
</CustomField>