lwcrecipies-master/force-app/main/default/objects/Stripe_Config__mdt/fields/Create_Token__c.field-meta.xml
<CustomField>
    <fullName>Create_Token__c</fullName>
    <defaultValue>&quot;https://api.stripe.com/v1/tokens&quot;</defaultValue>
    <label>Create Token</label>
    <type>Url</type>
</CustomField>